# drf-study

./: .gitignore  pyproject.toml
core/: settings.py  urls.py
instagram/: admin.py  models.py  serializers.py  urls.py  views.py
instagram/migrations/: 0001_initial.py  0002_post_author.py  0003_post_is_public.py  0004_post_ip.py  0005_alter_post_ip.py  0006_alter_post_ip.py
